--- a/app/src/main/res/layout/fragment_currently_playing.xml
+++ b/app/src/main/res/layout/fragment_currently_playing.xml
@@ -1,216 +1,222 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<com.codersguidebook.supernova.views.PullToCloseLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/tab_background" >
+    android:layout_height="match_parent">
 
-    <com.codersguidebook.supernova.PlaybackAnimator
-        android:id="@+id/animated_view"
-        android:layout_height="0dp"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/constraint_layout"
         android:layout_width="match_parent"
-        app:layout_constraintTop_toTopOf="@id/artwork"
-        app:layout_constraintBottom_toBottomOf="@id/currentSongInfo"
-        android:translationZ="100dp"/>
+        android:layout_height="match_parent"
+        android:background="@color/tab_background" >
 
-    <ImageView
-        android:id="@+id/artwork"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_marginBottom="10dp"
-        android:clickable="true"
-        android:transitionName="@string/transition_image"
-        app:layout_constraintDimensionRatio="1:1"
-        app:layout_constraintTop_toTopOf="parent"
-        android:contentDescription="@string/album_artwork" />
-
-    <ImageButton
-        android:id="@+id/currentClose"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:layout_marginStart="14dp"
-        android:layout_marginTop="36dp"
-        android:src="@drawable/ic_down"
-        android:translationZ="200dp"
-        style="@style/Widget.Custom.Button"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:contentDescription="@string/close_currently_playing" />
-
-    <ImageButton
-        android:id="@+id/currentSettings"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:layout_marginEnd="14dp"
-        android:layout_marginTop="36dp"
-        android:src="@drawable/ic_settings"
-        android:translationZ="200dp"
-        style="@style/Widget.Custom.Button"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:contentDescription="@string/action_settings" />
-
-    <ImageButton
-        android:id="@+id/currentFavourite"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:src="@drawable/ic_heart_border"
-        style="@style/Widget.Custom.Button"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/currentSongInfo"
-        app:layout_constraintTop_toTopOf="@id/currentSongInfo"
-        android:contentDescription="@string/add_to_favourites" />
-
-    <ImageButton
-        android:id="@+id/currentButtonRepeat"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:src="@drawable/ic_repeat"
-        style="@style/Widget.Custom.Button"
-        app:layout_constraintEnd_toStartOf="@id/currentSongInfo"
-        app:layout_constraintBottom_toBottomOf="@id/currentSongInfo"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/currentFavourite"
-        android:contentDescription="@string/repeat_current_playlist" />
-
-    <ImageButton
-        android:id="@+id/currentAddToPlaylist"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:src="@drawable/ic_add"
-        style="@style/Widget.Custom.Button"
-        app:layout_constraintStart_toEndOf="@id/currentSongInfo"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@id/currentSongInfo"
-        android:contentDescription="@string/add_playlist" />
-
-    <ImageButton
-        android:id="@+id/currentButtonShuffle"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:src="@drawable/ic_shuffle"
-        style="@style/Widget.Custom.Button"
-        app:layout_constraintStart_toEndOf="@id/currentSongInfo"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="@id/currentSongInfo"
-        app:layout_constraintTop_toBottomOf="@id/currentAddToPlaylist"
-        android:contentDescription="@string/shuffle_playlist" />
-
-    <LinearLayout
-        android:id="@+id/currentSongInfo"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_marginBottom="12dp"
-        android:layout_marginHorizontal="60dp"
-        app:layout_constraintTop_toBottomOf="@id/artwork"
-        app:layout_constraintBottom_toTopOf="@+id/seekbarLayout" >
-
-        <TextView
-            android:id="@+id/title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:transitionName="@string/transition_title"
-            android:layout_gravity="center"
-            android:layout_marginBottom="5dp"
-            android:singleLine="true"
-            android:textSize="20sp"
-            android:textColor="?attr/colorOnSurface" />
-
-        <TextView
-            android:id="@+id/artist"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:transitionName="@string/transition_subtitle"
-            android:layout_gravity="center"
-            android:layout_marginBottom="5dp"
-            android:singleLine="true"
-            android:textSize="18sp"
-            android:textColor="@color/onSurface60" />
-
-        <TextView
-            android:id="@+id/album"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:transitionName="@string/transition_subtitle2"
-            android:layout_gravity="center"
-            android:singleLine="true"
-            android:textSize="18sp"
-            android:textColor="@color/onSurface60" />
-    </LinearLayout>
-
-    <RelativeLayout
-        android:id="@+id/seekbarLayout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/currentSongInfo"
-        app:layout_constraintBottom_toTopOf="@+id/playbackControls">
-
-        <SeekBar
-            android:id="@+id/currentSeekBar"
+        <com.codersguidebook.supernova.PlaybackAnimator
+            android:id="@+id/animated_view"
+            android:layout_height="0dp"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            app:layout_constraintTop_toTopOf="@id/artwork"
+            app:layout_constraintBottom_toBottomOf="@id/currentSongInfo"
+            android:translationZ="100dp"/>
 
-        <TextView
-            android:id="@+id/currentPosition"
-            android:layout_width="wrap_content"
+        <ImageView
+            android:id="@+id/artwork"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_marginBottom="10dp"
+            android:clickable="true"
+            android:transitionName="@string/transition_image"
+            app:layout_constraintDimensionRatio="1:1"
+            app:layout_constraintTop_toTopOf="parent"
+            android:contentDescription="@string/album_artwork" />
+
+        <ImageButton
+            android:id="@+id/currentClose"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_marginStart="14dp"
+            android:layout_marginTop="36dp"
+            android:src="@drawable/ic_down"
+            android:translationZ="200dp"
+            style="@style/Widget.Custom.Button"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:contentDescription="@string/close_currently_playing" />
+
+        <ImageButton
+            android:id="@+id/currentSettings"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_marginEnd="14dp"
+            android:layout_marginTop="36dp"
+            android:src="@drawable/ic_settings"
+            android:translationZ="200dp"
+            style="@style/Widget.Custom.Button"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:contentDescription="@string/action_settings" />
+
+        <ImageButton
+            android:id="@+id/currentFavourite"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:src="@drawable/ic_heart_border"
+            style="@style/Widget.Custom.Button"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/currentSongInfo"
+            app:layout_constraintTop_toTopOf="@id/currentSongInfo"
+            android:contentDescription="@string/add_to_favourites" />
+
+        <ImageButton
+            android:id="@+id/currentButtonRepeat"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:src="@drawable/ic_repeat"
+            style="@style/Widget.Custom.Button"
+            app:layout_constraintEnd_toStartOf="@id/currentSongInfo"
+            app:layout_constraintBottom_toBottomOf="@id/currentSongInfo"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/currentFavourite"
+            android:contentDescription="@string/repeat_current_playlist" />
+
+        <ImageButton
+            android:id="@+id/currentAddToPlaylist"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:src="@drawable/ic_add"
+            style="@style/Widget.Custom.Button"
+            app:layout_constraintStart_toEndOf="@id/currentSongInfo"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@id/currentSongInfo"
+            android:contentDescription="@string/add_playlist" />
+
+        <ImageButton
+            android:id="@+id/currentButtonShuffle"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:src="@drawable/ic_shuffle"
+            style="@style/Widget.Custom.Button"
+            app:layout_constraintStart_toEndOf="@id/currentSongInfo"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="@id/currentSongInfo"
+            app:layout_constraintTop_toBottomOf="@id/currentAddToPlaylist"
+            android:contentDescription="@string/shuffle_playlist" />
+
+        <LinearLayout
+            android:id="@+id/currentSongInfo"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:layout_alignParentStart="true"
-            android:layout_below="@id/currentSeekBar"
-            android:textSize="14sp"
-            android:textColor="@color/onSurface60" />
+            android:orientation="vertical"
+            android:layout_marginBottom="12dp"
+            android:layout_marginHorizontal="60dp"
+            app:layout_constraintTop_toBottomOf="@id/artwork"
+            app:layout_constraintBottom_toTopOf="@+id/seekbarLayout" >
 
-        <TextView
-            android:id="@+id/currentMax"
-            android:layout_width="wrap_content"
+            <TextView
+                android:id="@+id/title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:transitionName="@string/transition_title"
+                android:layout_gravity="center"
+                android:layout_marginBottom="5dp"
+                android:singleLine="true"
+                android:textSize="20sp"
+                android:textColor="?attr/colorOnSurface" />
+
+            <TextView
+                android:id="@+id/artist"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:transitionName="@string/transition_subtitle"
+                android:layout_gravity="center"
+                android:layout_marginBottom="5dp"
+                android:singleLine="true"
+                android:textSize="18sp"
+                android:textColor="@color/onSurface60" />
+
+            <TextView
+                android:id="@+id/album"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:transitionName="@string/transition_subtitle2"
+                android:layout_gravity="center"
+                android:singleLine="true"
+                android:textSize="18sp"
+                android:textColor="@color/onSurface60" />
+        </LinearLayout>
+
+        <RelativeLayout
+            android:id="@+id/seekbarLayout"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="10dp"
-            android:layout_alignParentEnd="true"
-            android:layout_below="@id/currentSeekBar"
-            android:textSize="14sp"
-            android:textColor="@color/onSurface60"/>
-    </RelativeLayout>
+            app:layout_constraintTop_toBottomOf="@id/currentSongInfo"
+            app:layout_constraintBottom_toTopOf="@+id/playbackControls">
 
-    <RelativeLayout
-        android:id="@+id/playbackControls"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/seekbarLayout"
-        app:layout_constraintBottom_toBottomOf="parent">
+            <SeekBar
+                android:id="@+id/currentSeekBar"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
 
-        <ImageButton
-            android:id="@+id/btnBackward"
-            android:layout_width="55dp"
-            android:layout_height="55dp"
-            android:layout_marginEnd="12dp"
-            android:src="@drawable/ic_back"
-            android:transitionName="@string/transition_back"
-            android:contentDescription="@string/skip_back"
-            android:layout_toStartOf="@id/btnPlay"
-            android:layout_centerVertical="true"
-            style="@style/Widget.Custom.Button" />
+            <TextView
+                android:id="@+id/currentPosition"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:layout_alignParentStart="true"
+                android:layout_below="@id/currentSeekBar"
+                android:textSize="14sp"
+                android:textColor="@color/onSurface60" />
 
-        <ImageButton
-            android:id="@+id/btnPlay"
-            android:layout_width="70dp"
-            android:layout_height="70dp"
-            android:src="@drawable/ic_play"
-            android:transitionName="@string/transition_play"
-            android:layout_centerHorizontal="true"
-            android:contentDescription="@string/play_or_pause_current_track"
-            style="@style/Widget.Custom.Button" />
+            <TextView
+                android:id="@+id/currentMax"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="10dp"
+                android:layout_alignParentEnd="true"
+                android:layout_below="@id/currentSeekBar"
+                android:textSize="14sp"
+                android:textColor="@color/onSurface60"/>
+        </RelativeLayout>
 
-        <ImageButton
-            android:id="@+id/btnForward"
-            android:layout_width="55dp"
-            android:layout_height="55dp"
-            android:layout_marginStart="12dp"
-            android:src="@drawable/ic_next"
-            android:transitionName="@string/transition_forward"
-            android:contentDescription="@string/skip_ahead"
-            android:layout_toEndOf="@id/btnPlay"
-            android:layout_centerVertical="true"
-            style="@style/Widget.Custom.Button" />
-    </RelativeLayout>
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <RelativeLayout
+            android:id="@+id/playbackControls"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@id/seekbarLayout"
+            app:layout_constraintBottom_toBottomOf="parent">
+
+            <ImageButton
+                android:id="@+id/btnBackward"
+                android:layout_width="55dp"
+                android:layout_height="55dp"
+                android:layout_marginEnd="12dp"
+                android:src="@drawable/ic_back"
+                android:transitionName="@string/transition_back"
+                android:contentDescription="@string/skip_back"
+                android:layout_toStartOf="@id/btnPlay"
+                android:layout_centerVertical="true"
+                style="@style/Widget.Custom.Button" />
+
+            <ImageButton
+                android:id="@+id/btnPlay"
+                android:layout_width="70dp"
+                android:layout_height="70dp"
+                android:src="@drawable/ic_play"
+                android:transitionName="@string/transition_play"
+                android:layout_centerHorizontal="true"
+                android:contentDescription="@string/play_or_pause_current_track"
+                style="@style/Widget.Custom.Button" />
+
+            <ImageButton
+                android:id="@+id/btnForward"
+                android:layout_width="55dp"
+                android:layout_height="55dp"
+                android:layout_marginStart="12dp"
+                android:src="@drawable/ic_next"
+                android:transitionName="@string/transition_forward"
+                android:contentDescription="@string/skip_ahead"
+                android:layout_toEndOf="@id/btnPlay"
+                android:layout_centerVertical="true"
+                style="@style/Widget.Custom.Button" />
+        </RelativeLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</com.codersguidebook.supernova.views.PullToCloseLayout>
