--- a/app/src/main/res/layout/create_playlist.xml
+++ b/app/src/main/res/layout/create_playlist.xml
@@ -28,7 +28,7 @@
             android:layout_below="@id/createPlaylistTitle"
             android:layout_marginBottom="16dp"
             android:maxLength="30"
-            android:hint="@string/name_playlist"
+            android:hint="@string/playlist_name"
             android:textSize="16sp"
             android:textColor="@color/onSurface60"
             android:inputType="text"
