--- a/app/src/main/res/layout/fragment_currently_playing.xml
+++ b/app/src/main/res/layout/fragment_currently_playing.xml
@@ -53,7 +53,7 @@
             style="@style/Widget.Custom.Button"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            android:contentDescription="@string/action_settings" />
+            android:contentDescription="@string/settings" />
 
         <ImageButton
             android:id="@+id/currentFavourite"
