--- a/app/src/main/res/layout/fragment_edit_playlist.xml
+++ b/app/src/main/res/layout/fragment_edit_playlist.xml
@@ -66,7 +66,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             android:inputType="text"
-            android:hint="@string/name_playlist"
+            android:hint="@string/playlist_name"
             android:importantForAutofill="no" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
