--- a/app/src/main/res/layout/save_songs_dialog.xml
+++ b/app/src/main/res/layout/save_songs_dialog.xml
@@ -19,7 +19,7 @@
             android:layout_marginTop="6dp"
             android:padding="6dp"
             android:maxLength="30"
-            android:hint="@string/name_playlist"
+            android:hint="@string/playlist_name"
             android:textSize="16sp"
             android:textColor="@android:color/white"
             android:inputType="text"
