--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -10,7 +10,7 @@
         <item
             android:id="@+id/nav_home"
             android:icon="@drawable/ic_nav_home"
-            android:title="@string/menu_home" />
+            android:title="@string/home" />
         <item
             android:id="@+id/nav_queue"
             android:icon="@drawable/ic_nav_playing"
@@ -39,6 +39,6 @@
         <item
             android:id="@+id/nav_settings"
             android:icon="@drawable/ic_nav_settings"
-            android:title="@string/action_settings" />
+            android:title="@string/settings" />
     </group>
 </menu>
