--- a/app/src/main/res/layout/song_with_disc_preview.xml
+++ b/app/src/main/res/layout/song_with_disc_preview.xml
@@ -18,8 +18,7 @@
         android:id="@+id/songPreviewLayout"
         android:background="?attr/selectableItemBackground"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingVertical="10dp">
+        android:layout_height="wrap_content">
 
         <TextView
             android:id="@+id/songTrack"
