--- a/app/src/main/res/layout/all_songs.xml
+++ b/app/src/main/res/layout/all_songs.xml
@@ -10,14 +10,14 @@
         android:id="@+id/allSongs"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/viewSongsArrow"
         android:padding="12dp"
         android:text="@string/all_songs"
         android:textSize="16sp"
-        android:textColor="?attr/colorOnSurface" />
+        android:textColor="?attr/colorOnSurface"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/viewSongsArrow" />
 
     <ImageView
         android:id="@+id/viewSongsArrow"
