--- a/app/src/main/res/layout/item_details.xml
+++ b/app/src/main/res/layout/item_details.xml
@@ -13,7 +13,7 @@
         android:textSize="16sp" />
 
     <TextView
-        android:id="@+id/artist"
+        android:id="@+id/subtitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:singleLine="true"
