--- a/app/src/main/res/layout/song_with_disc_preview.xml
+++ b/app/src/main/res/layout/song_with_disc_preview.xml
@@ -31,7 +31,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <include layout="@layout/song_preview"
+        <include layout="@layout/item_with_menu"
             android:layout_height="match_parent"
             android:layout_width="0dp"
             app:layout_constraintEnd_toEndOf="parent"
