--- a/app/src/main/res/layout/item_details.xml
+++ b/app/src/main/res/layout/item_details.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="0dp"
     android:layout_height="wrap_content"
-    android:layout_marginStart="10dp">
+    android:paddingHorizontal="10dp">
 
     <TextView
         android:id="@+id/title"
@@ -19,5 +19,5 @@
         android:singleLine="true"
         android:textSize="14sp"
         android:textColor="@color/onSurface60"
-        android:layout_below="@id/title"/>
+        android:layout_below="@id/title" />
 </RelativeLayout>
