--- a/app/src/main/res/layout/item_with_artwork_preview.xml
+++ b/app/src/main/res/layout/item_with_artwork_preview.xml
@@ -2,7 +2,8 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="60dp" >
+    android:layout_height="60dp"
+    android:background="?attr/selectableItemBackground">
 
     <ImageView
         android:id="@+id/artwork"
@@ -14,7 +15,6 @@
         android:contentDescription="@string/album_artwork" />
 
     <include layout="@layout/item_with_menu"
-        android:background="?attr/selectableItemBackground"
         android:layout_height="match_parent"
         android:layout_width="0dp"
         app:layout_constraintEnd_toEndOf="parent"
