--- a/app/src/main/res/layout/fragment_currently_playing.xml
+++ b/app/src/main/res/layout/fragment_currently_playing.xml
@@ -10,7 +10,7 @@
         android:layout_height="match_parent"
         android:background="@color/tab_background" >
 
-        <com.codersguidebook.supernova.PlaybackAnimator
+        <com.codersguidebook.supernova.views.PlaybackAnimator
             android:id="@+id/animated_view"
             android:layout_height="0dp"
             android:layout_width="match_parent"
