Streamlined live data retrieval of album and artist songs. Also rolling out the feature for deleting songs

--- a/app/src/main/res/layout/artist_options.xml
+++ b/app/src/main/res/layout/artist_options.xml
@@ -21,66 +21,53 @@
             android:textSize="20sp" />
 
         <TextView
-            android:id="@+id/option1"
+            android:id="@+id/playNext"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/optionsTitle"
             android:padding="12dp"
             android:background="?attr/selectableItemBackground"
+            android:text="@string/play_next"
             android:textSize="16sp" />
 
         <TextView
-            android:id="@+id/option2"
+            android:id="@+id/addPlayQueue"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/option1"
+            android:layout_below="@id/playNext"
             android:padding="12dp"
             android:background="?attr/selectableItemBackground"
+            android:text="@string/add_que"
             android:textSize="16sp" />
 
         <TextView
-            android:id="@+id/option3"
+            android:id="@+id/addPlaylist"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/option2"
+            android:layout_below="@id/addPlayQueue"
             android:padding="12dp"
             android:background="?attr/selectableItemBackground"
+            android:text="@string/add_playlist"
             android:textSize="16sp" />
 
         <TextView
-            android:id="@+id/option4"
+            android:id="@+id/editArtist"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/option3"
+            android:layout_below="@id/addPlaylist"
             android:padding="12dp"
             android:background="?attr/selectableItemBackground"
+            android:text="@string/edit_album"
             android:textSize="16sp" />
 
         <TextView
-            android:id="@+id/option5"
+            android:id="@+id/deleteArtist"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/option4"
+            android:layout_below="@id/editArtist"
             android:padding="12dp"
             android:background="?attr/selectableItemBackground"
-            android:textSize="16sp" />
-
-        <TextView
-            android:id="@+id/option6"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/option5"
-            android:padding="12dp"
-            android:background="?attr/selectableItemBackground"
-            android:textSize="16sp" />
-
-        <TextView
-            android:id="@+id/option7"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/option6"
-            android:padding="12dp"
-            android:background="?attr/selectableItemBackground"
+            android:text="@string/delete_artist"
             android:textSize="16sp" />
     </RelativeLayout>
 </androidx.cardview.widget.CardView>
