--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -43,6 +43,10 @@
         <item android:id="@+id/editPlaylist"
             android:title="@string/edit_playlist"
             app:showAsAction="never" />
+
+        <item android:id="@+id/deletePlaylist"
+            android:title="@string/delete_playlist"
+            app:showAsAction="never" />
     </group>
 
     <group android:id="@+id/menu_group_album_actions"
