--- a/app/src/main/res/xml/root_preferences.xml
+++ b/app/src/main/res/xml/root_preferences.xml
@@ -1,6 +1,16 @@
 <PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <PreferenceCategory app:title="Language">
+
+        <ListPreference
+            app:defaultValue="@string/english_code"
+            app:entries="@array/language_entries"
+            app:entryValues="@array/language_values"
+            app:key="application_language"
+            app:useSimpleSummaryProvider="true" />
+    </PreferenceCategory>
+
     <PreferenceCategory app:title="@string/playback_animations">
 
         <SwitchPreferenceCompat
