Progress on creating a scroll bar for the RecyclerView

--- a/app/src/main/res/layout/scroll_recycler_view.xml
+++ b/app/src/main/res/layout/scroll_recycler_view.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.simplecityapps.recyclerview_fastscroll.views.FastScrollRecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
+<!-- <com.simplecityapps.recyclerview_fastscroll.views.FastScrollRecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/recyclerView"
     android:background="@color/fragment_background"
@@ -17,4 +17,22 @@
     app:fastScrollPopupTextSize="32dp"
     app:fastScrollPopupTextVerticalAlignmentMode="font_metrics"
     app:fastScrollThumbColor="@color/accent"
-    app:fastScrollThumbEnabled="true" />
+    app:fastScrollThumbEnabled="true" /> -->
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
+
+    <!-- android:progressDrawable="@drawable/seekbar_drawable" -->
+    <com.codersguidebook.supernova.views.RecyclerViewScrollbar
+        android:id="@+id/seekBar"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+</androidx.constraintlayout.widget.ConstraintLayout>
