--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,6 +2,7 @@
 <resources>
     <color name="accent">#84C9FB</color>
     <color name="accent12">#1F84C9FB</color>
+    <color name="onSurface30">#4DFFFFFF</color>
     <color name="onSurface60">#99FFFFFF</color>
     <color name="primary12">#1FBB86FC</color>
     <color name="tab_background">#111111</color>
