Work on refactoring the data model

--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -37,7 +37,8 @@
         <argument
             android:name="playlistName"
             android:defaultValue="null"
-            app:argType="string" />
+            app:argType="string"
+            app:nullable="true" />
     </fragment>
 
     <fragment
@@ -48,7 +49,8 @@
         <argument
             android:name="playlistName"
             android:defaultValue="null"
-            app:argType="string" />
+            app:argType="string"
+            app:nullable="true" />
         <action
             android:id="@+id/action_finish_edit_playlist"
             app:destination="@id/nav_playlist"
@@ -70,7 +72,8 @@
         <argument
             android:name="artist"
             android:defaultValue="null"
-            app:argType="string" />
+            app:argType="string"
+            app:nullable="true" />
     </fragment>
 
     <fragment
@@ -81,7 +84,8 @@
         <argument
             android:name="artist"
             android:defaultValue="null"
-            app:argType="string" />
+            app:argType="string"
+            app:nullable="true" />
     </fragment>
 
     <fragment
@@ -92,7 +96,8 @@
         <argument
             android:name="artist"
             android:defaultValue="null"
-            app:argType="string" />
+            app:argType="string"
+            app:nullable="true" />
         <action
             android:id="@+id/action_finish_edit_artist"
             app:destination="@id/nav_artist"
@@ -113,7 +118,6 @@
         tools:layout="@layout/fragment_with_recycler_view">
         <argument
             android:name="albumId"
-            android:defaultValue="null"
             app:argType="string" />
     </fragment>
 
@@ -124,7 +128,6 @@
         tools:layout="@layout/fragment_edit_album">
         <argument
             android:name="albumId"
-            android:defaultValue="null"
             app:argType="string" />
         <action
             android:id="@+id/action_finish_edit_album"
@@ -164,8 +167,8 @@
         <argument
             android:name="song"
             android:defaultValue="@null"
-            app:nullable="true"
-            app:argType="com.codersguidebook.supernova.entities.Song" />
+            app:argType="com.codersguidebook.supernova.entities.Song"
+            app:nullable="true" />
     </fragment>
 
     <action
