--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,7 @@
     <color name="accent12">#1F84C9FB</color>
     <color name="onSurface30">#4DFFFFFF</color>
     <color name="onSurface60">#99FFFFFF</color>
+    <color name="onSurface84">#D6FFFFFF</color>
     <color name="primary12">#1FBB86FC</color>
     <color name="tab_background">#111111</color>
     <color name="preview_background">#121212</color>
