--- a/app/src/main/res/layout/scroll_recycler_view.xml
+++ b/app/src/main/res/layout/scroll_recycler_view.xml
@@ -34,5 +34,6 @@
         android:id="@+id/seekBar"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
+        android:translationZ="100dp"
         app:layout_constraintEnd_toEndOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
