--- a/app/src/main/res/layout/scroll_recycler_view.xml
+++ b/app/src/main/res/layout/scroll_recycler_view.xml
@@ -15,7 +15,6 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:valueLabelWidth="500dp"
         app:thumbOnColor="@color/gold"
-        app:valueLabelTextColor="@color/red2" />
+        app:valueLabelBackgroundColor="@color/red2" />
 </androidx.constraintlayout.widget.ConstraintLayout>
