--- a/app/src/main/res/layout/fragment_with_fab.xml
+++ b/app/src/main/res/layout/fragment_with_fab.xml
@@ -2,8 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/fragment_background" >
+    android:layout_height="match_parent">
 
     <include layout="@layout/scroll_recycler_view"
         android:id="@+id/scroll_recycler_view" />
