--- a/app/src/main/res/layout/scroll_recycler_view.xml
+++ b/app/src/main/res/layout/scroll_recycler_view.xml
@@ -8,6 +8,7 @@
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/fragment_background"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
 
     <com.codersguidebook.supernova.views.RecyclerViewScrollbar
