--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -5,46 +5,54 @@
     android:layout_height="match_parent"
     android:background="@color/fragment_background">
 
-    <com.google.android.material.chip.ChipGroup
-        android:id="@+id/chipGroup"
+    <HorizontalScrollView
+        android:id="@+id/chipContainer"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:paddingHorizontal="6dp"
+        android:scrollbars="none"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:checkedChip="@id/trackChip"
-        app:singleLine="true"
-        app:singleSelection="true"
-        app:selectionRequired="true"
-        app:layout_constraintTop_toTopOf="parent" >
+        app:layout_constraintTop_toTopOf="parent">
 
-        <com.google.android.material.chip.Chip
-            android:id="@+id/trackChip"
-            style="@style/Widget.MaterialComponents.Chip.Choice"
-            android:text="@string/songs"
+        <com.google.android.material.chip.ChipGroup
+            android:id="@+id/chipGroup"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            app:checkedChip="@id/trackChip"
+            app:singleLine="true"
+            app:singleSelection="true"
+            app:selectionRequired="true">
 
-        <com.google.android.material.chip.Chip
-            android:id="@+id/albumChip"
-            style="@style/Widget.MaterialComponents.Chip.Choice"
-            android:text="@string/albums"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            <com.google.android.material.chip.Chip
+                android:id="@+id/trackChip"
+                style="@style/Widget.MaterialComponents.Chip.Choice"
+                android:text="@string/songs"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
 
-        <com.google.android.material.chip.Chip
-            android:id="@+id/artistChip"
-            style="@style/Widget.MaterialComponents.Chip.Choice"
-            android:text="@string/artists"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            <com.google.android.material.chip.Chip
+                android:id="@+id/albumChip"
+                style="@style/Widget.MaterialComponents.Chip.Choice"
+                android:text="@string/albums"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
 
-        <com.google.android.material.chip.Chip
-            android:id="@+id/playlistChip"
-            style="@style/Widget.MaterialComponents.Chip.Choice"
-            android:text="@string/playlists"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-    </com.google.android.material.chip.ChipGroup>
+            <com.google.android.material.chip.Chip
+                android:id="@+id/artistChip"
+                style="@style/Widget.MaterialComponents.Chip.Choice"
+                android:text="@string/artists"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+            <com.google.android.material.chip.Chip
+                android:id="@+id/playlistChip"
+                style="@style/Widget.MaterialComponents.Chip.Choice"
+                android:text="@string/playlists"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+        </com.google.android.material.chip.ChipGroup>
+    </HorizontalScrollView>
 
     <TextView
         android:id="@+id/noResults"
@@ -54,7 +62,7 @@
         android:text="@string/no_results"
         android:textSize="14sp"
         android:visibility="gone"
-        app:layout_constraintTop_toBottomOf="@+id/chipGroup"
+        app:layout_constraintTop_toBottomOf="@+id/chipContainer"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
@@ -65,6 +73,6 @@
         android:layout_marginVertical="6dp"
         android:contentDescription="@string/search_results"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        app:layout_constraintTop_toBottomOf="@+id/chipGroup"
+        app:layout_constraintTop_toBottomOf="@+id/chipContainer"
         app:layout_constraintBottom_toBottomOf="parent"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
