--- a/app/src/main/res/layout/small_preview_with_plays.xml
+++ b/app/src/main/res/layout/small_preview_with_plays.xml
@@ -8,11 +8,10 @@
 
     <ImageView
         android:id="@+id/artwork"
-        android:layout_width="0dp"
-        android:layout_height="100dp"
-        android:maxWidth="100dp"
-        app:layout_constraintStart_toStartOf="parent"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintDimensionRatio="1:1"
         android:contentDescription="@string/album_artwork" />
 
     <TextView
