--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,7 @@
     <color name="accent">#84C9FB</color>
     <color name="accent12">#1F84C9FB</color>
     <color name="onSurface">#FFFFFF</color>
-    <color name="onSurface60">#99FFFFFF</color>
+    <color name="inactive">#99FFFFFF</color>
     <color name="tab_background">#111111</color>
     <color name="preview_background">#121212</color>
     <color name="fragment_background">#212121</color>
