--- a/app/src/main/res/layout/fragment_currently_playing.xml
+++ b/app/src/main/res/layout/fragment_currently_playing.xml
@@ -8,7 +8,7 @@
         android:id="@+id/constraint_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/tab_background" >
+        android:background="@color/tab_background">
 
         <com.codersguidebook.supernova.views.PlaybackAnimator
             android:id="@+id/animated_view"
@@ -109,7 +109,7 @@
             android:layout_marginBottom="12dp"
             android:layout_marginHorizontal="60dp"
             app:layout_constraintTop_toBottomOf="@id/artwork"
-            app:layout_constraintBottom_toTopOf="@+id/seekbarLayout" >
+            app:layout_constraintBottom_toTopOf="@+id/seekbarLayout">
 
             <TextView
                 android:id="@+id/title"
@@ -131,7 +131,7 @@
                 android:layout_marginBottom="5dp"
                 android:singleLine="true"
                 android:textSize="18sp"
-                android:textColor="@color/onSurface60" />
+                android:textColor="@color/inactive" />
 
             <TextView
                 android:id="@+id/album"
@@ -141,7 +141,7 @@
                 android:layout_gravity="center"
                 android:singleLine="true"
                 android:textSize="18sp"
-                android:textColor="@color/onSurface60" />
+                android:textColor="@color/inactive" />
         </LinearLayout>
 
         <RelativeLayout
@@ -164,7 +164,7 @@
                 android:layout_alignParentStart="true"
                 android:layout_below="@id/currentSeekBar"
                 android:textSize="14sp"
-                android:textColor="@color/onSurface60" />
+                android:textColor="@color/inactive" />
 
             <TextView
                 android:id="@+id/currentMax"
@@ -174,7 +174,7 @@
                 android:layout_alignParentEnd="true"
                 android:layout_below="@id/currentSeekBar"
                 android:textSize="14sp"
-                android:textColor="@color/onSurface60"/>
+                android:textColor="@color/inactive" />
         </RelativeLayout>
 
         <RelativeLayout
