--- a/app/src/main/res/layout/item_details.xml
+++ b/app/src/main/res/layout/item_details.xml
@@ -18,6 +18,6 @@
         android:layout_height="wrap_content"
         android:singleLine="true"
         android:textSize="14sp"
-        android:textColor="@color/onSurface60"
+        android:textColor="@color/inactive"
         android:layout_below="@id/title" />
 </RelativeLayout>
