--- a/app/src/main/res/layout/player_controls.xml
+++ b/app/src/main/res/layout/player_controls.xml
@@ -56,7 +56,7 @@
                 android:transitionName="@string/transition_subtitle"
                 android:singleLine="true"
                 android:textSize="14sp"
-                android:textColor="@color/onSurface60" />
+                android:textColor="@color/inactive" />
 
             <TextView
                 android:id="@+id/album"
@@ -65,7 +65,7 @@
                 android:transitionName="@string/transition_subtitle2"
                 android:singleLine="true"
                 android:textSize="14sp"
-                android:textColor="@color/onSurface60" />
+                android:textColor="@color/inactive" />
         </LinearLayout>
 
         <ImageButton
