--- a/app/src/main/res/layout/playlist_song.xml
+++ b/app/src/main/res/layout/playlist_song.xml
@@ -28,7 +28,7 @@
         android:layout_height="wrap_content"
         android:singleLine="true"
         android:textSize="14sp"
-        android:textColor="@color/onSurface60"
+        android:textColor="@color/inactive"
         android:visibility="gone"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
