--- a/app/src/main/res/menu/animation_menu.xml
+++ b/app/src/main/res/menu/animation_menu.xml
@@ -2,6 +2,5 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:id="@+id/menu_change"
         android:title="@string/change_image" />
-    <item android:id="@+id/menu_delete"
-        android:title="@string/delete_image" />
+    <item android:title="@string/delete_image" />
 </menu>
